--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "async-git",
-  "version": "1.7.0",
-  "description": "👾 Get some git info",
+  "version": "1.8.0",
+  "description": "👾 Retrieve data from current git repository",
   "keywords": [
     "git",
     "github",
