--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "async-git",
-  "version": "1.8.0",
+  "version": "1.9.0",
   "description": "👾 Retrieve data from current git repository",
   "keywords": [
     "git",
@@ -34,8 +34,13 @@
   },
   "devDependencies": {
     "@omrilotan/eslint-config": "^1.1.0",
-    "eslint": "^6.5.1",
+    "abuser": "^2.0.2",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "eslint": "^6.6.0",
     "eslint-plugin-log": "^1.2.3",
-    "mocha-setup": "0.0.2"
+    "mocha": "^6.2.2",
+    "sinon": "^7.5.0",
+    "sinon-chai": "^3.3.0"
   }
 }
