--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "async-git",
-  "version": "1.9.0",
+  "version": "1.9.1",
   "description": "👾 Retrieve data from current git repository",
   "keywords": [
     "git",
@@ -37,8 +37,10 @@
     "abuser": "^2.0.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "deep-equal-in-any-order": "^1.0.21",
     "eslint": "^6.6.0",
     "eslint-plugin-log": "^1.2.3",
+    "index-require": "^1.0.1",
     "mocha": "^6.2.2",
     "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0"
