--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "async-git",
-  "version": "1.10.0",
+  "version": "1.10.1",
   "description": "👾 Retrieve data from current git repository",
   "keywords": [
     "git",
@@ -26,7 +26,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha '**/spec.js' --require .mocha.js --recursive --exclude 'node_modules'",
-    "lint": "eslint '*.js' '**/*.js'"
+    "lint": "eslint . --ext .js"
   },
   "dependencies": {
     "@does/exist": "^1.0.0",
