--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,10 +3,6 @@ updates:
 - package-ecosystem: npm
   directory: "/"
   schedule:
-    interval: daily
+    interval: weekly
     time: "03:00"
   open-pull-requests-limit: 10
-  ignore:
-  - dependency-name: sinon
-    versions:
-    - 10.0.0
