[FIX] git reset

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,19 +9,27 @@ jobs:
         node-version:
           - '12'
           - '14'
+          - '16'
     steps:
-    - uses: actions/checkout@v1
-    - name: Install dependencies
-      run: npm i
-    - name: Run tests
-      run: npm t
-    - name: Check syntax
-      run: npm run lint -- --plugin log
+    - uses: actions/checkout@v2
+    - run: npm i
+    - run: npm t
+    - run: npm run lint -- --plugin log
+  publish:
+    if: ${{ always() }}
+    needs:
+      - build
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version:
+          - '16'
+    steps:
+    - uses: actions/checkout@v2
     - name: Add NPM token
       if: github.ref == 'refs/heads/main'
       run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc
       env:
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-    - name: Build and Publish
+    - run: npx @lets/publish
       if: github.ref == 'refs/heads/main'
-      run: npx @lets/publish
