--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "async-git",
-  "version": "1.13.2",
+  "version": "1.13.3",
   "description": "👾 Retrieve data from current git repository",
   "keywords": [
     "git",
@@ -14,10 +14,11 @@
     "branch",
     "author",
     "git log",
-    "source control"
+    "source control",
+    "🐙"
   ],
   "author": "omrilotan",
-  "license": "MIT",
+  "license": "Unlicense",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/omrilotan/async-git.git"
@@ -40,11 +41,11 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "deep-equal-in-any-order": "^1.0.21",
-    "eslint": "^7.0.0",
+    "eslint": "^8.5.0",
     "eslint-plugin-log": "^1.2.3",
     "index-require": "^1.0.1",
-    "mocha": "^8.0.1",
-    "sinon": "^11.1.2",
+    "mocha": "^9.1.3",
+    "sinon": "^12.0.1",
     "sinon-chai": "^3.3.0"
   }
 }
